# DiscoAnalytica

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
contributors/: katheryn-shechet.md  patrick-shechet.md
data/tcc_ceds_music/: attribution.json  preview_tcc_ceds_music.csv
help/: table_types.md
proposals/: climate.md
src/discoanalytica/: __init__.py  data_manager.py  db.py  errors.py  file_hash.py  manage_data.py  paths.py  source_handler.py
src/discoanalytica/data/: __init__.py  pipeline.py
src/discoanalytica/data/file_types/: csv.py
src/discoanalytica/data/providers/: kaggle.py
src/discoanalytica/data_definitions/: music-dataset-1950-to-2019.json
src/discoanalytica/data_sources/: music-dataset-1950-to-2019.json
src/discoanalytica/ingestion/: music-dataset-1950-to-2019.py
src/discoanalytica/models/: data_definition.py  data_source.py  database.py
src/discoanalytica/sql/: base_tables.sql  music-dataset-1950-to-2019.sql
