[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DiscoAnalytica"
version = "0.1.0"
description = "A collaborative music analysis project exploring lyrical sentiment, genre trends, and societal correlations."
authors = [
    { name = "Katheryn M. Shechet", email = "ktmtta@gmail.com" },
    { name = "Patrick R Shechet", email = "patrick.shechet@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "spacy",
    "duckdb"
]

[tool.setuptools]
packages = ["discoanalytica"]

[project.optional-dependencies]
dev = [
    "black"
]
