[project]
name = "DiscoAnalytica"
version = "0.1.0"
description = "A collaborative music analysis project exploring lyrical sentiment, genre trends, and societal correlations."
readme = "README.md"
authors = [
    { name = "Katheryn M. Shechet", email = "ktmtta@gmail.com" },
    { name = "Patrick R Shechet", email = "patrick.shechet@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.2.0",
]

[project.scripts]
discoanalytica = "discoanalytica:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
